--- a/dev/sass/05 - elements/_elements.lists.scss
+++ b/dev/sass/05 - elements/_elements.lists.scss
@@ -3,5 +3,5 @@
 //------------------------------------------------------------------------------------------------------------------------------------
 
 dd, ol, ul {
-  margin:0 0 $spacing-unit-md $spacing-unit-md;
+  margin:0 0 $spacing-unit $spacing-unit;
 }
